# token-machine

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  intro-mock.html  package.json  pyproject.toml  tsconfig.json
reference/: ARCHITECTURE.md  DESIGN.md
reference/lessons/: chart-overlay-circles-and-class-collisions.md  concentric-pulse-needs-a-real-parent.md
reference/plan/: dashboard-typescript-migration-plan.md
scripts/: check-dashboard-build.mjs  vendor_icons.py
src/token_machine/: __init__.py  __main__.py  cli.py  config.py  models.py
src/token_machine/dashboard/: app.py  assets.py  icon_vendor.py  icons.py  render.py  routes.py  static.py  view_models.py
src/token_machine/dashboard/assets/css/: base.css  charts.css  intro.css  layout.css  live.css  (+2 more)
src/token_machine/dashboard/templates/: dashboard.html
src/token_machine/ingest/: discovery.py  pipeline.py
src/token_machine/live/: __init__.py  model_names.py  models.py  probes.py  service.py  statusline.py  store.py
src/token_machine/metrics/: aggregate.py  profiles.py  tools.py
src/token_machine/sources/: __init__.py  base.py  claude.py  codex.py  gemini.py  opencode.py  zed.py
src/token_machine/storage/: jsonl.py  repository.py
src/token_machine/utils/: ids.py  paths.py  time.py
tests/: test_claude_source.py  test_cli.py  test_codex_source.py  test_dashboard.py  test_gemini_source.py  test_icon_vendor.py  test_live.py  test_metrics.py  test_models.py  test_opencode_source.py  test_public_package.py  test_storage.py  test_zed_source.py
(+30 files in other folders)
